chore: rebrand frontend to ssu-time

--- a/frontend/@ssu-time/frontend/src/App.css
+++ b/frontend/@ssu-time/frontend/src/App.css
@@ -55,7 +55,7 @@
   flex-grow: 0;
 }
 
-/* 타이틀: 발표 연습, 이젠 SpeakON에서 끝내세요! */
+/* 타이틀: 발표 연습, 이젠 SSU Time에서 끝내세요! */
 .title-text {
   width: auto;
   height: 26px;
